@@ -23,7 +23,7 @@ import hexdump
 import Doc, cmd
 import escher
 import vsd, vsdchunks,vsdstream4
-import xls, vba, ole
+import xls, vba, ole, doc
 import emfparse,svm,mf,wmfparse,cdr,emfplus
 
 version = "0.5.46"
@@ -288,10 +288,14 @@ class ApplicationMainWindow(gtk.Window):
 
 			else:
 				print "Select Clipboard entry to save it"
-		elif ftype == "VSD":
+		elif ftype == "vsd":
 			fname = self.file_open('Save',None,gtk.FILE_CHOOSER_ACTION_SAVE)
 			if fname:
 				vsd.save(self.das[pn],fname)
+		elif ftype == "doc":
+			fname = self.file_open('Save',None,gtk.FILE_CHOOSER_ACTION_SAVE)
+			if fname:
+				doc.save(self.das[pn],fname)
 		else:
 			print '"Save" is not implemented for this file format.'
 
@@ -556,7 +560,7 @@ class ApplicationMainWindow(gtk.Window):
 				elif	ntype[0] == "xls":
 					if xls.biff5_ids.has_key(ntype[1]):
 						xls.biff5_ids[ntype[1]](hd,data)
-				elif	ntype[0] == "ole":
+				elif	ntype[0] == "cfb":
 					if ole.ole_ids.has_key(ntype[1]):
 						ole.ole_ids[ntype[1]](hd,data)
 
